--- a/ZeroHunger42915/ZeroHunger42915/ZeroHunger42915.csproj
+++ b/ZeroHunger42915/ZeroHunger42915/ZeroHunger42915.csproj
@@ -265,6 +265,8 @@
     <Content Include="Views\Employee\Index.cshtml" />
     <Content Include="Views\Restaurant\_Search.cshtml" />
     <Content Include="Views\Employee\_AssignedTasks.cshtml" />
+    <Content Include="Views\Admin\_Employees.cshtml" />
+    <Content Include="Views\Admin\_AddEmployee.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
